Refactoring products for event

--- a/event/templates/event-form.html
+++ b/event/templates/event-form.html
@@ -18,8 +18,8 @@
     </form>
 
 
-    {% if product %}
-        <a href="{% url 'delete_product' product.id %}">Delete</a>
+    {% if event %}
+        <a href="{% url 'delete_event' event.id %}">Delete</a>
     {% endif %}
 </body>
 </html>
