--- a/event/templates/employees.html
+++ b/event/templates/employees.html
@@ -11,12 +11,11 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
+<div class="container">
         <!-- NAVBAR -->
         <div class="block">
             <nav class="navbar">
@@ -49,23 +48,18 @@
             </nav>
 
         </div>
-        <h1>New Event</h1>
+    <ul>
+        {% for x in employee %}
+            <div class="card">
+                <a href="">
+                    <li> {{ x.username }}</li>
+                    <br>
+                </a>
+            </div>
+        {% endfor %}
+    </ul>
 
-        <form method="POST">
-            {% csrf_token %}
-            {{ form }}
-            <button type="submit">Save</button>
-        </form>
-
-{#        {% if user.is_employee %}#}
-{#        <p>This is an employee account.</p>#}
-{#        {% else %}#}
-{#        <p>Please login to see this page.</p>#}
-{#        {% endif %}#}
-{##}
-{#    {% if event %}#}
-{#        <a href="{% url 'delete_event' event.id %}">Delete</a>#}
-{#    {% endif %}#}
-    </div>
+    <a href="{% url 'redirect_to_home' %}">Redirect to home</a>
+</div>
 </body>
 </html>
